Undoes temporary dark mode (headache prevention)

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 body {
   font-family: "Playfair Display", serif;
-  background-color: rgb(90,90,90);
 }
 
 h2 {
